fix swagger redirection
