# storage/api-docs/api-docs.json
@@ -250,10 +250,10 @@
     },
     "components": {
         "securitySchemes": {
-            "apiAuth": {
+            "bearerAuth": {
                 "type": "http",
                 "description": "Authentication Bearer Token",
-                "name": "Authentication Bearer Token",
+                "name": "Authorization",
                 "in": "header",
                 "bearerFormat": "JWT",
                 "scheme": "bearer"
